--- a/pom.xml
+++ b/pom.xml
@@ -130,6 +130,12 @@
             <optional>true</optional>
         </dependency>
 
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.14</version>
+        </dependency>
+
     </dependencies>
 
     <pluginRepositories>
