--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,9 +5,9 @@ spring:
   # ???
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/bank
+    url: jdbc:mysql://localhost:3306/mobilebank
     username: root
-    password: 1234
+    password: 123456
 
   # ????
   mvc:
