--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -36,6 +36,7 @@ mybatis-plus:
     db-config:
       logic-not-delete-value: 1
       logic-delete-value: 0
+  mapper-locations: classpath:com/ccnu/mobilebank/mapper/xml/*.xml
 
 # ??
 logging:
