完成联系人、个人信息管理、账户管理

--- a/pom.xml
+++ b/pom.xml
@@ -125,6 +125,12 @@
         <!-- 文件上传 end  -->
 
         <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.14</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <optional>true</optional>
