--- a/pom.xml
+++ b/pom.xml
@@ -136,6 +136,13 @@
             <version>1.14</version>
         </dependency>
 
+
+        <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+
+
     </dependencies>
 
     <pluginRepositories>
