关闭驼峰命名自动转换

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -32,6 +32,7 @@ mybatis-plus:
   configuration:
     # ??
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+    map-underscore-to-camel-case: false
   global-config:
     # ????
     db-config:
